<resources>
    <string name="app_name">Collage Reminder</string>


    <!--MENÚ PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="CollageReminder">Collage Reminder</string>
    <string name="NombrePrincipal"> -- </string>
    <string name="saludo">Hola, bienvenido a College Reminder</string>
    <string name="default_notification_channel_id">tu_canal_de_notificaciones</string>
    <string name="msg_token_fmt">Token de registro de FCM: %1$s</string>
    <string name="recordatorio">Recuerda tratarte con mucho cariño, hacer pausas de descanso y continuar; te ayudamos a organizarte para
                                que logres tus tareas diarias. Ánimo</string>

    <string name="mision">Ofrecer una herramienta que se adapte a las necesidades de los estudiantes universitarios. Nuestra
                            aplicación tiene como objetivo principal facilitar la organización y mejorar la eficencia en la
                            gestión de tareas y responsabilidades.</string>

    <string name="soporte">Queremos brindar un soporte personalizado y rápido. Proporcionando nuestro número telefónico, te ofrecemos la posibilidad de
                            comunicarte directamente con nuestro equipo de soporte para recibir atención inmediata</string>

    <string name="equipo">El equipo de soporte de College Reminder</string>

    <!--PARA BIENESTAR -->

    <string name="creer">Cree en ti mismo y serás imparable.</string>
    <string name="encontrar">Encuentra consejos, frases y enlaces a videos que te ayudan a afrontar un mal día. Sigue adelante</string>
    <string name="consejofinal">Recuerda que puedes con todo, pero también es importante buscar ayuda. Siempre hay una solución,
                                no dejes que un mal dia te haga creer que tienes una mala vida. Las pruebas son temporales, siempre
                                vuelve a salir el sol.</string>


    <!--**********************************************-->

    <!-- Array de colores -->
    <string-array name="colors_array">
        <item>amarillo</item>
        <item>azul</item>
        <item>verde</item>
        <item>rojo</item>
    </string-array>
    <!-- Prompt para seleccionar un color -->
    <string name="select_color_prompt">Selecciona un nivel</string>


    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>